--- a/style.css
+++ b/style.css
@@ -410,12 +410,12 @@ a:not(.logo):focus {
 
 /* Portfolio section navigation */
 
-.section-portfolio {
+.page-portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.nav-portfolio-btn {
+.page-portfolio__btn {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -438,8 +438,8 @@ a:not(.logo):focus {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-portfolio-btn:hover,
-.nav-portfolio-btn:focus {
+.page-portfolio__btn:hover,
+.page-portfolio__btn:focus {
   color: #ffffff;
   background: #2196f3;
   /* shadow-middle */
@@ -449,12 +449,12 @@ a:not(.logo):focus {
   border-radius: 4px;
 }
 
-.portfolio-nav-list {
+.page-portfolio__nav-list {
   display: flex;
   justify-content: center;
 }
 
-.portfolio-nav-list-item:not(:last-child) {
+.page-portfolio__item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -462,17 +462,17 @@ a:not(.logo):focus {
 
 /* img-links-portfolio */
 
-.project-box {
+.porfolio-gallery__project-box {
   padding: 20px 24px;
 }
 
-.porfolio-img-list {
+.porfolio-gallery {
   display: flex;
   flex-wrap: wrap;
   margin: -15px;
 }
 
-.portfolio-img-list-item {
+.porfolio-gallery__item {
   margin: 15px;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
@@ -482,7 +482,7 @@ a:not(.logo):focus {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-tittle {
+.porfolio-gallery__tittle {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -497,12 +497,12 @@ a:not(.logo):focus {
   margin-bottom: 4px;
 }
 
-.portfolio-img-box {
+.porfolio-gallery__img-box {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-img-desc {
+.porfolio-gallery__desc {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -529,15 +529,15 @@ a:not(.logo):focus {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  transform: translateY(100%);
+  transform: translateY(101%);
 }
 
-.portfolio-img-links:hover .portfolio-img-desc,
-.portfolio-img-links:focus .portfolio-img-desc {
+.porfolio-gallery__link:hover .porfolio-gallery__desc,
+.porfolio-gallery__link:focus .porfolio-gallery__desc {
   transform: translateY(0);
 }
 
-.project-mini-desc {
+.porfolio-gallery__mini-desc {
   font-family: Roboto;
   font-style: normal;
   font-weight: 400;
@@ -550,14 +550,14 @@ a:not(.logo):focus {
   color: #757575;
 }
 
-.portfolio-img-links {
+.porfolio-gallery__link {
   width: 100%;
   height: 100%;
   display: block;
 }
 
-.portfolio-img-links:focus,
-.portfolio-img-links:hover {
+.porfolio-gallery__link:focus,
+.porfolio-gallery__link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
